--- a/client/src/components/ModalVoting.css
+++ b/client/src/components/ModalVoting.css
@@ -52,27 +52,25 @@
 }
 
 .protocol_button {
-	padding: 10px 15px;
-	width: 100%; /* Полная ширина для кнопок */
-	border: none;
-	border-radius: 4px;
-	background-color: #007bff;
-	color: white;
+	padding: 10px;
+	margin: 5px;
 	cursor: pointer;
-	transition: background-color 0.3s;
-}
-
-.protocol_button:hover {
-	background-color: #0056b3;
 }
 
 .protocol_button.filled-by-current-judge {
-	background-color: green; /* Или другой цвет, который обозначает, что протокол заполнен текущим судьей */
+	background-color: green;
 	color: white;
+	cursor: not-allowed;
 }
 
 .protocol_button.filled-by-other-judge {
-	background-color: red; /* Или другой цвет, который обозначает, что протокол заполнен другим судьей */
+	background-color: red;
 	color: white;
 	cursor: not-allowed;
+}
+
+.protocol_button.allow-multiple {
+	background-color: blue;
+	color: white;
+	cursor: pointer;
 }
