fix toggle color

--- a/frontend/src/layouts/Header.scss
+++ b/frontend/src/layouts/Header.scss
@@ -13,3 +13,8 @@
 	height: 2px;
 	background-color: #ff4081; /* Розовая линия */
 }
+
+.custom_toggle {
+	background-color: #ff6347; /* Tomato color */
+	color: white;
+}
