--- a/frontend/src/components/adminpanel/RegisterAthletePage.css
+++ b/frontend/src/components/adminpanel/RegisterAthletePage.css
@@ -2,3 +2,10 @@
 	background-color: green;
 	color: white;
 }
+
+.spinner-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 80vh;
+}
