--- a/frontend/src/pages/HomePage/ContentHomePage.module.scss
+++ b/frontend/src/pages/HomePage/ContentHomePage.module.scss
@@ -1,4 +1,4 @@
-@use '../../index.scss';
+@use '../../styles/global.scss';
 
 .home_page {
     display: flex;
@@ -6,8 +6,9 @@
     justify-content: center;
     align-items: center;
     color: #fff;
+}
 
-    .container_h1 {
+.container_h1 {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -15,7 +16,7 @@
         margin-top: 35vh;
     }
 
-    .oswald_main_h1 {
+.oswald_main_h1 {
         text-align: center;
         font-family: 'Oswald', sans-serif;
         font-size: 85px;
@@ -23,7 +24,7 @@
         font-weight: bold;
         margin-top: -20px;
     }
-}
+
 
 /* Для устройств с шириной экрана до 1024px */
 @media (max-width: 1024px) {
